# wasm-mandelbrot

./: .gitignore  Cargo.toml  index.html  package.json  vite.config.ts
assets/: index-14907e21.js  index-e6987551.js  index-f0ce90ca.css  innards_bg.wasm
innards/: Cargo.toml
innards/src/: app.rs  complex.rs  lib.rs  util.rs
src/: main.ts  style.css
